src/objects/RecTypes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <label>Developer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RecTypeId__c</fullName>
        <label>Record Type Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Record Types</label>
</CustomObject>